syntax = "proto3";

option go_package = "github.com/Kami0rn/MicroService";

//Structures
message Empty {}

message AccessTokenSearchReq {
    string accessToken = 1 ;
}

message AccessTokenSearchRes {
    bool isValid = 1 ;
}

message RoleCountReq {}

message RoleCountRes {
    int64 count = 1 ;
}

//Methods
service AuthGrpcService {
    rpc AccessTokenSearch(AccessTokenSearchReq) returns(AccessTokenSearchRes);
    rpc RolesCount(RoleCountReq) returns(RoleCountRes);
}